<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.overlord.sramp</groupId>
	<artifactId>s-ramp-ui-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>S-RAMP-UI Common Parent</name>

	<url>http://www.jboss.org/overlord</url>
	<packaging>pom</packaging>
	<description>S-RAMP UI is a user interface to any spec-compliant S-RAMP repository.</description>
	<inceptionYear>2012</inceptionYear>

	<organization>
		<name>JBoss, a division of Red Hat</name>
		<url>http://www.jboss.org</url>
	</organization>

	<licenses>
		<license>
			<name>Apache License Version 2.0</name>
			<url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
			<!--url>http://www.gnu.org/licenses/lgpl.html</url -->
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<!-- Instruct the build to use only UTF-8 encoding for source code -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>4.8.2</junit.version>
		<log4j.version>1.2.16</log4j.version>
		<slf4j.api.version>1.5.11</slf4j.api.version>
		<slf4j.log4j.version>1.5.11</slf4j.log4j.version>
		<!-- Maven plugin versions -->
		<maven.surefire.report.plugin.version>2.4.3</maven.surefire.report.plugin.version>
		<maven.surefire.plugin.version>2.7.1</maven.surefire.plugin.version>
		<maven.assembly.plugin.version>2.2</maven.assembly.plugin.version>
		<maven.install.plugin.version>2.3.1</maven.install.plugin.version>
		<maven.javadoc.plugin.version>2.7</maven.javadoc.plugin.version>
		<maven.jxr.plugin.version>2.1</maven.jxr.plugin.version>
		<maven.jar.plugin.version>2.3.1</maven.jar.plugin.version>
		<maven.war.plugin.version>2.1.1</maven.war.plugin.version>
		<maven.bundle.plugin.version>2.1.0</maven.bundle.plugin.version>
		<maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
		<maven.source.plugin.version>2.1.2</maven.source.plugin.version>
		<maven.deploy.plugin.version>2.5</maven.deploy.plugin.version>
		<!-- Third party libraries -->
		<org.jboss.resteasy.version>2.3.4.Final</org.jboss.resteasy.version>
		<vaadin.version>6.7.1</vaadin.version>
		<gwt.version>2.5.0-rc1</gwt.version>
		<gwt.plugin.version>2.2.0</gwt.plugin.version>
		<!-- Apache Commons -->
		<commons.io.version>1.3.2</commons.io.version>
		<commons.lang3.version>3.1</commons.lang3.version>
		<commons.config.version>1.8</commons.config.version>
		<commons.fileupload.version>1.2.2</commons.fileupload.version>
	</properties>

	<scm>
		<connection>scm:git:git://github.com/Governance/s-ramp-ui.git</connection>
		<developerConnection>scm:git:git@github.com:Governance/s-ramp-ui.git</developerConnection>
		<url>http://github.com/Governance/s-ramp-ui</url>
	</scm>

	<issueManagement>
		<system>jira</system>
		<url>http://issues.jboss.org/browse/SRAMP</url>
	</issueManagement>

	<developers>
		<developer>
			<name>Eric Wittmann</name>
			<id>ewittman</id>
			<email>eric.wittmann@redhat.com</email>
			<organization>Red Hat</organization>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven.assembly.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>${maven.bundle.plugin.version}</version>
					<extensions>true</extensions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<!-- Specify the compiler options and settings -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<showDeprecation>false</showDeprecation>
					<showWarnings>false</showWarnings>
				</configuration>
			</plugin>
			<!-- Produce source jars during the 'verify' phase -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven.source.plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<includes>
						<include>**/*TestCase.java</include>
						<include>**/*Test.java</include>
					</includes>
					<systemProperties>
						<property>
							<name>java.io.tmpdir</name>
							<value>${basedir}/target</value>
						</property>
					</systemProperties>
					<argLine>-Xmx256M -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<!-- Vaadin -->
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin</artifactId>
				<version>${vaadin.version}</version>
			</dependency>
			<!-- GWT -->
			<dependency>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt-servlet</artifactId>
				<version>${gwt.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt-user</artifactId>
				<version>${gwt.version}</version>
			</dependency>
			<!-- Common libraries -->
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>2.3</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-configuration</groupId>
				<artifactId>commons-configuration</artifactId>
				<version>${commons.config.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons.fileupload.version}</version>
			</dependency>
			<!-- Logging -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>${maven.surefire.report.plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>

	<repositories>
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Repository Group</name>
			<url>http://repository.jboss.org/nexus/content/groups/developer/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>vaadin-snapshots</id>
			<url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>vaadin-addons</id>
			<url>http://maven.vaadin.com/vaadin-addons</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Repository Group</name>
			<url>http://repository.jboss.org/nexus/content/groups/developer/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>jboss-releases-repository</id>
			<name>JBoss Releases Repository</name>
			<url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

</project>